--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
+    "suncalc": "^1.8.0"
+  },
   "devDependencies": {
     "eslint-config-agrc": "^1.1.0"
   }
